Account for overlay scrollbars when computing scrollbar width/height.

This specifically addresses overlay scrollbars created via css with
overflow:overlay.  In some places, those scrollbars are treated
differently from overlay scrollbars created by the platform theme
(e.g., on mac).

BUG=657718
R=skobes@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2725763002
Cr-Commit-Position: refs/heads/master@{#454105}

Former-commit-id: 5a729d1bc790d94120ec942a4566bb85f969cdb1